@@ -1,3 +1,7 @@
+17/03/2011:
+	- Clean-up of signed/unsigned variables in IIPImage.h and KakaduImage.h.
+
+
 15/03/2011:
 	- Added sanity check for requested resolutions and tiles in JTL.cc.
 	- Fixed problem with edge tiles and watermarking.
